bug(ui): fixed external filters and overlapping issue.

--- a/minted-web/src/styles.scss
+++ b/minted-web/src/styles.scss
@@ -359,8 +359,7 @@ body {
 }
 
 // --- DatePicker overlay ---
-.p-datepicker-panel,
-.p-datepicker {
+.p-datepicker-panel {
   z-index: 1101 !important;
 }
 
